<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logobomb"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/bombbam" />

    <TextView
        android:id="@+id/textDev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logobomb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/app_dev"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/appVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textDev"
        android:textColor="@color/colorAccent"
        android:text="Version:1.0"
        android:textSize="11sp"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/textWarn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appVer"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="300dp"
        android:gravity="center"
        android:text="@string/warning"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="@color/red"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/warndesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textWarn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="7dp"
        android:textSize="16sp"
        android:text="@string/warning_desc"
        android:textColor="@color/colorAccent" />
    <TextView
        android:id="@+id/appDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:textSize="13sp"
        android:text="@string/app_desc"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/appVer"
        android:layout_marginTop="40dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:text="@string/app_name"
        android:layout_below="@id/logobomb"
        android:textColor="@color/colorAccent"/>

</RelativeLayout>